<resources>
    <string name="app_name">元梦购</string>
    <string name="navigation_drawer_open">打开了</string>
    <string name="navigation_drawer_close">关闭了</string>

    <string name="tab_main">首页</string>
    <string name="tab_publish">揭晓</string>
    <string name="tab_show">晒单</string>
    <string name="tab_account">我的</string>
    <string name="seachstr">搜索</string>
    <string name="bar_1">30秒了解</string>
    <string name="bar_2">公平吗?</string>
    <string name="bar_3">QQ群</string>
    <string name="last_publish">最新揭晓</string>
    <string name="show_all">显示全部</string>
    <string name="renqi">人气</string>
    <string name="zuixin">最新↓</string>
    <string name="jx">最快↓</string>
    <string name="jg">价格↓</string>
    <string name="jx_soon">正在揭晓</string>
    <string name="show_prasie">羡慕嫉妒恨</string>
    <string name="show_comment">评论</string>
    <string name="show_try_again">我也试试</string>

    <!-- 主页—  揭晓-->
    <string name="jx_showtime">揭晓时间:</string>
    <string name="jx_user">获得者:</string>
    <string name="jx_joincount">参与人次:</string>
    <string name="jx_code">幸运号码:</string>

    <!-- 我的-->
    <string name="tv_login">登录</string>
    <string name="tv_register">注册</string>
    <string name="tv_balance" formatted="false">余额：%s元</string>
    <string name="tv_score" formatted="false">圆梦币：%s</string>
    <string name="tv_sign_in">签到</string>
    <string name="tv_pay">充值</string>

    <string name="tv_my_dream_shop">我的元梦购</string>
    <string name="tv_my_shop_card">购物车</string>
    <string name="tv_my_shop_buy">获得的商品</string>
    <string name="tv_my_shop_pub">晒单</string>

    <string name="tv_user_detail">账户明细</string>
    <string name="tv_user_address">收获地址管理</string>
    <string name="tv_user_set">设置</string>
    <string name="tv_login_phone">请输入手机号码</string>
    <string name="tv_login_password">请输入密码</string>

    <!-- 登录-->
    <string name="tv_new_user_reg">新用户注册</string>
    <string name="tv_check_password">忘记密码</string>
    <string name="tv_other_login">使用其它方式登录</string>
    <string name="tv_username_empty">请输入用户名</string>
    <string name="tv_psd_empty">请输入密码</string>

    <!-- 注册-->
    <string name="tv_input_phone">请输入手机号码</string>
    <string name="tv_input_code">请输入验证码</string>
    <string name="tv_get_code">获取验证码</string>
    <string name="tv_input_psd">输入密码</string>
    <string name="tv_input_psd2">再次输入密码</string>
    <string name="tv_input_psd_dif">俩次输入的密码不一样</string>
    <string name="tv_reg_error">注册失败 请稍后重试</string>

    <!-- 充值-->
    <string name="tv_money_now" formatted="false" >您当前余额：%s元</string>s\
    <string name="tv_money" formatted="false">%s元</string>
    <string name="tv_money10">10</string>
    <string name="tv_money30">30</string>
    <string name="tv_money50">50</string>
    <string name="tv_money100">100</string>
    <string name="tv_money200">200</string>
    <string name="tv_money_other">其它金额</string>
    <string name="tv_pay_type">支付方式：</string>
    <string name="tv_type_now">马上充值</string>
    <string name="tv_edit_hint">请输入充值金额</string>

    <!-- 用户信息-->
    <string name="tv_head_icon">头像</string>
    <string name="tv_nickname">昵称</string>
    <string name="tv_signature">个性签名</string>
    <string name="tv_signature_un">未添加</string>
    <string name="tv_user_email">邮箱</string>
    <string name="tv_user_phone">手机号</string>
    <string name="tv_user_phone_un">未绑定</string>


    <!-- error -->
    <string name="net_error">网络异常，请检查网络</string>

    <!-- 收获地址-->
    <string name="tv_address">收货地址</string>
    <string name="tv_address_set">收货地址管理</string>
    <string name="tv_address_goto_add">去添加</string>
    <string name="tv_address_add">添加新的收获地址</string>
    <string name="tv_address_title">收货地址</string>
    <string name="tv_address_name">收货人：</string>
    <string name="tv_address_mobile">手机号：</string>
    <string name="tv_address_sheng">省/市/区：</string>
    <string name="tv_address_detail">详细地址：</string>
    <string name="tv_address_comment">备注信息：</string>
    <string name="tv_address_def">设为默认收获地址</string>
    <string name="tv_address_empty">请输入完整的收货地址</string>
    <string name="tv_address_def_empty">设置默认收货地址失败</string>

    <!-- 公用-->
    <string name="tv_commit">提交</string>
    <string name="comment">评论</string>
    <string name="countInfo">计算详情</string>
    <!-- 我的元梦购-->
    <string name="tv_my_dream_ing">进行中</string>
    <string name="tv_my_dream_un">已揭晓</string>
    <string name="seach">搜索</string>
    <string name="tv_my_dream_ckxq">查看详情</string>
    <string name="tv_my_dream_zxrc" formatted="false" >总需人次：%s人次</string>
    <string name="tv_my_dream_hdz" formatted="false" >获得者：%s</string>
    <string name="tv_my_dream_jxsj" formatted="false" >揭晓时间：%s</string>

    <!-- 账户明细-->
    <string name="tv_account_chongzhi_detail">充值明细</string>
    <string name="tv_account_xiaofei_detail">消费明细</string>
    <string name="goodInfo_join" formatted="false">我本期参与记录 (共%s条)</string>
    <string name="goodInfo_jiexiao" >往期揭晓</string>
    <string name="goodInfo_tuwen" >图文详情</string>
    <string name="goodInfo_shaidan" >晒单分享</string>
    <string name="goodInfo_canyujilu" >本期所有参与记录</string>

    <string name="gongping">公平公正</string>
    <string name="zhengpinbaozheng">正品保证</string>
    <string name="quanguomianyou">全国免邮</string>

    <!-- 设置-->
    <string name="tv_set_title">帮助中心</string>
    <string name="tv_set_help_new">新手帮助</string>
    <string name="tv_set_fwxy">服务协议</string>
    <string name="tv_set_cjwt">常见问题</string>
    <string name="tv_set_login_out">退出登录</string>

    <!-- 我获得的奖品-->
    <string name="tv_spfc">商品发出</string>
    <string name="tv_qrsh">确认收获</string>
    <string name="tv_sdjl">晒单奖励</string>
    <string name="tv_zsyc">再试一次</string>

    <!-- 购物车-->
    <string name="shopcart_empty">您的购物车是空的~</string>
    <string name="shopcart_saiman">去塞满它</string>
    <string name="shopcart_pay">立即购买</string>

    <string name="good_empty">这里空空如也~</string>
    <string name="pay_mode">支付方式:</string>
    <string name="pay_str">支付</string>
    <string name="just_pay_str">立即支付</string>
    
    <string name="pay_good_title">产品名称:</string>
    <string name="pay_good_count">数量:</string>
    <string name="pay_good_money">应付金额:</string>
    <string name="pay_good_money_shi">实付金额:</string>
    
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
