<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://robobinding.org/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingPrefix"
    android:descendantFocusability="blocksDescendants"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    >


    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        >

        <TextView
            android:id="@+id/address_title"
            style="@style/warp_tv_pub_style"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/tv_address_title"
            bind:text="{addressCount}"
            />

        <ImageView
            android:id="@+id/img_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/img_edit"
            bind:onClick="onclick"
            />
    </RelativeLayout>

    <include layout="@layout/line_horizontal_gray"
        />

    <com.dream.views.layout.LayoutItemEdit
        android:id="@+id/address_name"
        style="@style/nomarl_style_fill"
        android:padding="5dp"
        fresco:textValue="@string/tv_address_name"
        bind:editValue="{addressName}"
        />

    <com.dream.views.layout.LayoutItemEdit
        android:id="@+id/address_mobile"
        style="@style/nomarl_style_fill"
        android:padding="5dp"
        fresco:textValue="@string/tv_address_mobile"
        bind:editValue="{addressMobile}"
        />

    <com.dream.views.layout.LayoutItemEdit
        android:id="@+id/address_sheng"
        style="@style/nomarl_style_fill"
        android:padding="5dp"
        fresco:textValue="@string/tv_address_sheng"
        bind:editValue="{addressSheng}"
        />

    <com.dream.views.layout.LayoutItemEdit
        android:id="@+id/address_detail"
        style="@style/nomarl_style_fill"
        android:padding="5dp"
        fresco:textValue="@string/tv_address_detail"
        bind:editValue="{addressDetail}"
        />


</LinearLayout>