<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:bind="http://robobinding.org/android"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix"
    android:orientation="vertical"
    >

    <RelativeLayout
        style="@style/nomarl_style_fill">
        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="fill_parent"
            android:layout_height="180dip"
            />
        <com.slib.viewpagerindicator.CirclePageIndicator
            android:id="@+id/pager_indicator"
            style="@style/nomarl_style_fill"
            android:fillViewport="false"
            android:layout_alignBottom="@+id/pager"
            android:layout_marginBottom="5dp"
            />
    </RelativeLayout>
    <!-- 三个功能 -->
    <LinearLayout
        style="@style/nomarl_style_fill"
        android:orientation="horizontal"
        android:background="@color/white"
        android:gravity="center"
        >
        <Button
            android:id="@+id/bar_1"
            style="@style/bar_style"
            android:text="@string/bar_1"
            bind:onClick="operClick"
             />
        <Button
            android:id="@+id/bar_2"
            style="@style/bar_style"
            android:text="@string/bar_2"
            android:button="@null"
            />
        <Button
            android:id="@+id/bar_3"
            style="@style/bar_style"
            android:text="@string/bar_3"
            bind:onClick="operClick"
            />
    </LinearLayout>

    <RelativeLayout
        style="@style/nomarl_style_fill"
        android:background="@color/white"
        android:layout_marginTop="15dip"
        android:padding="10dip"
        >
        <TextView
            style="@style/main_tab_item_press"
            android:text="@string/last_publish"
            android:layout_centerVertical="true"
            />
        <TextView
            style="@style/main_tab_item_nomarl"
            android:text="@string/show_all"
            android:drawableRight="@drawable/ic_launcher"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <GridView
        style="@style/nomarl_style_fill"
        android:layout_height="100dip"
        android:numColumns="3"
        android:gravity="center"
        android:listSelector="@null"
        bind:itemLayout="@layout/main_goods_item"
        bind:onItemClick="goodsItemClick"
        />


</LinearLayout>
