<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://robobinding.org/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include
        layout="@layout/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        style="@style/layout_login_edit"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:hint="@string/tv_login_phone" />

    </LinearLayout>

    <LinearLayout
        style="@style/layout_login_edit"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />


        <EditText
            android:id="@+id/ed_psd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:hint="@string/tv_login_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/tv_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_user_reg"
            style="@style/login_tv_pub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_new_user_reg" />

        <include layout="@layout/line_vertical_gray"></include>

        <TextView
            android:id="@+id/tv_check_psw"
            style="@style/login_tv_pub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_check_password" />

    </LinearLayout>



    <TextView
        style="@style/login_tv_pub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_other_login"
        android:layout_marginTop="30dp"
        android:id="@+id/tv_other_login" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher"
        android:layout_marginTop="10dp"
        />

</LinearLayout>
