<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://robobinding.org/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dream.main.tabme.address.AddressEditAct"
    tools:ignore="MissingPrefix">

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/scrollview"
        android:layout_below="@+id/title_bar"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">


        <com.dream.views.layout.LayoutItemEdit
            android:id="@+id/address_name"
            style="@style/nomarl_style_fill"
            android:padding="5dp"
            fresco:editEnabled="true"
            fresco:textValue="@string/tv_address_name"></com.dream.views.layout.LayoutItemEdit>

        <include layout="@layout/line_horizontal_gray"></include>

        <com.dream.views.layout.LayoutItemEdit
            android:id="@+id/address_mobile"
            style="@style/nomarl_style_fill"
            android:padding="5dp"
            fresco:editEnabled="true"
            fresco:textValue="@string/tv_address_mobile"></com.dream.views.layout.LayoutItemEdit>

        <include layout="@layout/line_horizontal_gray"></include>

        <com.dream.views.layout.LayoutItemEdit
            android:id="@+id/address_sheng"
            style="@style/nomarl_style_fill"
            android:padding="5dp"
            fresco:editEnabled="true"
            fresco:textValue="@string/tv_address_sheng"></com.dream.views.layout.LayoutItemEdit>

        <include layout="@layout/line_horizontal_gray"></include>

        <com.dream.views.layout.LayoutItemEdit
            android:id="@+id/address_shi"
            style="@style/nomarl_style_fill"
            android:padding="5dp"
            fresco:editEnabled="true"
            fresco:textValue="@string/tv_address_shi"></com.dream.views.layout.LayoutItemEdit>

        <include layout="@layout/line_horizontal_gray"></include>

        <com.dream.views.layout.LayoutItemEdit
            android:id="@+id/address_xian"
            style="@style/nomarl_style_fill"
            android:padding="5dp"
            fresco:editEnabled="true"
            fresco:textValue="@string/tv_address_xian"></com.dream.views.layout.LayoutItemEdit>

        <include layout="@layout/line_horizontal_gray"></include>

        <com.dream.views.layout.LayoutItemEdit
            android:id="@+id/address_detail"
            style="@style/nomarl_style_fill"
            android:padding="5dp"
            fresco:editEnabled="true"
            fresco:textValue="@string/tv_address_detail"></com.dream.views.layout.LayoutItemEdit>

        <include layout="@layout/line_horizontal_gray"></include>


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_address_def" />


    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/bt_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_commit"
            bind:onClick="onClicks" />

    </ScrollView>


</RelativeLayout>