<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:bind="http://robobinding.org/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:background="@color/white"
    >

    <!-- 商品名称-->
    <LinearLayout
        style="@style/nomarl_style_fill"
        android:orientation="horizontal"
        >
        <TextView
            style="@style/pay_left_style"
            android:text="@string/pay_good_title"
            />
        <TextView
            style="@style/pay_right_style"
            bind:text="{goodtitle}"
            android:layout_weight="1"
            />
    </LinearLayout>

    <include layout="@layout/line_horizontal_gray"></include>

    <!-- 数量-->
    <LinearLayout
        style="@style/nomarl_style_fill"
        android:orientation="horizontal"
        >
        <TextView
            style="@style/pay_left_style"
            android:text="@string/pay_good_count"
            />
        <TextView
            style="@style/pay_right_style"
            bind:text="{count}"
            android:layout_weight="1"
            />
    </LinearLayout>

    <include layout="@layout/line_horizontal_gray"></include>
    <!-- 应付金额-->
    <LinearLayout
        style="@style/nomarl_style_fill"
        android:orientation="horizontal"
        >
        <TextView
            style="@style/pay_left_style"
            android:text="@string/pay_good_money"
            />
        <TextView
            style="@style/pay_right_style"
            bind:text="{money}"
            android:layout_weight="1"
            />
    </LinearLayout>



</LinearLayout>